src/modules/header/wideSearch/wideSearch.css
/* search filed position */
#search-button {
    display: flex;
    justify-content: start;
    flex-grow: 1;
    overflow: hidden;
    height: 34px;
    margin: 0 10px;
    padding: 0 6px;
    border-radius: 5px;
    border: 1px solid #88888850;
    transition: all .3s;
    font-family: var(--awUi-font);
}
#search-button::after {
    display: block;
    content: "Search or create page";
    margin: 0 0 0 5px;
    font-size: calc(var(--awUi-font-size) + 2px);
}

/* search popup position */
.ui__modal[label="ls-modal-search"] .ui__modal-panel {
    transition: none !important;
}
.is-search-opened .ui__modal {
    top: calc(var(--awUi-tabs-height, 0px) + 5px);
    padding: 0;
}
.is-search-opened .panel-content,
.is-search-opened .cp__palette-main,
.ui__modal-panel .panel-content .ls-search {
    min-width: unset;
    width: auto;
}
.is-search-opened .cp__palette-main {
    margin: -2rem -1.5rem;
}
@media (min-width: 640px) {
    .is-search-opened .cp__palette-main {
        margin: -2rem;
    }
}

.ls-search {
    border-radius: 4px;
    border: 1px solid #88888850;
}
.ls-search .input-wrap {
    height: 34px;
}
.ls-search .input-wrap::before {
    font-family: "tabler-icons";
    content: "\eb1c";
    font-size: 20px;
    position: absolute;
    left: 7px;
    top: 1px;
}
.ls-search .input-wrap .cp__palette-input {
    font-size: calc(var(--awUi-font-size) + 2px);
    padding: 0 31px 2px 31px;
}

/* search results style */
.ls-search .search-result,
.ls-search .search-result .font-medium {
    font-weight: 400;
}
.ls-search .search-results .menu-link {
    padding-top: 0;
    padding-bottom: 0;
}
.ls-search .menu-link {
    border-top: 1px dashed var(--ls-secondary-background-color);
}
.ls-search .menu-link:hover,
.ls-search .menu-link .chosen {
    background-color: var(--ls-primary-background-color);
}

